<resources>
    <string name="app_name">MusicApp</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- TODO: Facebook -->

    <string name="facebook_app_id">1234</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>

    <!-- TODO: Explore Fragment -->
    <string name="listen_again">Nghe gần đây</string>
    <string name="topic">Chủ đề</string>
    <string name="category">Thể loại</string>
    <string name="you_listen">Có thể bạn muốn nghe</string>
    <string name="social_rank">Bảng xếp hạng</string>
    <string name="add">Thêm</string>
    <string name="mood_today">Tâm trạng hôm nay</string>
    <string name="doing_love">Đang được yêu thích</string>
    <string name="album_new">Album mới phát hành</string>
    <string name="are_you_dont_login">Bạn chưa đăng nhập</string>
    <string name="loading">Loading…</string>
    <string name="down">Download</string>
    <string name="love">Yêu thích</string>
    <string name="playlist">Thêm vào playlist</string>
    <string name="loop">Nghe lại</string>
    <string name="email">Email</string>
    <string name="m_t_kh_u">Mật khẩu</string>
    <string name="qu_n_m_t_kh_u">Quên mật khẩu ?</string>
    <string name="ng_nh_p">Đăng nhập</string>
    <string name="nh_p_l_i_m_t_kh_u">Nhập lại mật khẩu</string>
    <string name="ng_k">Đăng ký</string>
    <string name="g_i">Gửi</string>
    <string name="playlist_t_o">Playlist Đã Tạo</string>
    <string name="playlist_y_u_th_ch">Playlist Yêu Thích</string>
    <string name="_0_b_i_h_t">0 bài hát</string>
    <string name="b_i_h_t">&#160; bài hát</string>
    <string name="song">&#160;track</string>
    <string name="y_u_th_ch">Yêu thích</string>
    <string name="t_i">Đã tải</string>
    <string name="ph_t_ng_u_nhi_n">Phát ngẫu nhiên</string>
    <string name="url">https://cdn-icons-png.freepik.com/512/3607/3607444.png</string>
    <string name="t_o_playlist_m_i">Tạo playlist mới</string>
    <string name="nh_p_t_n_playlist">Nhập tên playlist</string>
    <string name="t_o_playlist">Tạo playlist</string>
    <string name="nh_c_tr">Nhạc trẻ</string>
    <string name="d_nh_cho_b_n">Dành cho bạn</string>
    <string name="kh_m_ph">Khám phá</string>
    <string name="video_nh_c">Video Nhạc</string>
    <string name="c_a_tui">Của Tui</string>
    <string name="sau_l_i_t_kh_c_phan_m_nh_qu_nh_official_mv_ost_phim_mai_o_di_n_tr_n_th_nh">SAU LỜI TỪ KHƯỚC - PHAN MẠNH QUỲNH | OFFICIAL MV (OST phim MAI, Đạo Diễn Trấn Thành)</string>
    <string name="phan_m_nh_qu_nh">Phan Mạnh Quỳnh</string>
    <string name="time">5:53</string>
    <string name="theo_d_i">Theo dõi</string>
    <string name="xem_ti_p">Xem tiếp</string>
    <string name="kh_ng_c_video_nh_c_n_o">Không có video nhạc nào</string>
    <string name="_10s">10s</string>
    <string name="img_pla">https://iili.io/HlHy9Yx.png</string>
    <string name="ch_n_playlist">Chọn playlist</string>
    <string name="ch_n_t_t_c">Chọn tất cả</string>
    <string name="x_a">Xóa</string>
    <string name="th_m_v_o_playlist">Thêm vào playlist</string>
    <string name="ch_n_playlist_th_m_b_i_h_t_v_o">Chọn playlist để thêm bài hát vào</string>
    <string name="ch_m_v_o_xem_l_i_b_i_h_t">Chạm vào để xem lời bài hát</string>
    <string name="ch_y_ngay_i">Chạy ngay đi</string>
    <string name="s_n_t_ng_m_tp">Sơn Tùng M-TP</string>
    <string name="kh_ng_c_l_i_b_i_h_t">Không có lời bài hát</string>
    <string name="danh_s_ch_ph_t">Danh sách phát</string>
    <string name="ng_xu_t">Đăng xuất</string>
    <string name="_1">1</string>
    <string name="xem_t_t_c"><![CDATA[Xem tất cả >]]></string>
    <string name="ph_t_t_t_c">Phát tất cả</string>
    <string name="h_y_kh_m_ph_v_t_i_b_i_h_t_hay">Hãy khám phá và tải bài hát hay</string>
    <string name="kh_ng_c_d_li_u">Không có dữ liệu</string>
    <string name="nh_c_t_i">Nhạc đã tải</string>
    <string name="h_y_kh_m_ph_nh_ng_phaylist_kh_c_nh">Hãy khám phá những phaylist khác nhé</string>
    <string name="playlists">Playlist</string>
    <string name="albums">Album</string>
    <string name="songs">Bài hát</string>
    <string name="music_videos">Video</string>
    <string name="kh_ng_c_n_i_dung_t_m_ki_m">Không có nội dung tìm kiếm</string>
    <string name="nh_p_s_i_n_tho_i_c_a_b_n">Nhập số điện thoại của bạn</string>
    <string name="s_i_n_tho_i_s_c_t_ng_ng_k_sau_khi_x_c_th_c_th_nh_c_ng">Số điện thoại sẽ được tự động đăng ký sau khi xác thực thành công</string>
    <string name="s_i_n_tho_i">Số điện thoại</string>
    <string name="g_i_m">Gửi mã</string>
    <string name="s_i_n_tho_i_kh_ng_h_p_l">Số điện thoại không hợp lệ</string>
    <string name="_84">+84</string>
    <string name="your_web_client_id">826716371935-5pi266e6tbgavs5pptl873kmhl87h309.apps.googleusercontent.com</string>
    <string name="default_web_client_id">826716371935-o6kmkc8gmvrifukhm0hg0q7061gvsd59.apps.googleusercontent.com</string>
    <string name="login">Login ...</string>
    <string name="x_c_th_c_m_otp">Xác thực mã OTP</string>
    <string name="nh_p_m_otp_ti_p_t_c">Nhập mã OTP để tiếp tục</string>
    <string name="otp">OTP</string>
    <string name="g_i_l_i_m">Gửi lại mã :&#160;</string>
    <string name="_60">60</string>
    <string name="gi_y">&#160;giây</string>
    <string name="ang_theo_d_i">Đang theo dõi</string>
    <string name="_100_ng_i_theo_d_i">&#160;người theo dõi</string>
    <string name="b_theo_d_i">Bỏ theo dõi</string>
</resources>