<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/music_menu"
        android:icon="@drawable/ic_music_for_you_no"
        android:title="@string/d_nh_cho_b_n"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/explore_menu"
        android:icon="@drawable/ic_explore_no"
        android:title="@string/kh_m_ph"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/mv_menu"
        android:icon="@drawable/ic_menu_mv"
        android:title="@string/video_nh_c"
        app:showAsAction="always" />

    <item
        android:id="@+id/user_menu"
        android:icon="@drawable/ic_user_no"
        android:title="@string/c_a_tui"
        app:showAsAction="always" />
</menu>