<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/down_action"
        android:icon="@drawable/baseline_download_24"
        android:title="@string/down"
        app:showAsAction="always" />
    <item
        android:id="@+id/playlist_action"
        android:icon="@drawable/ic_playlist"
        android:title="@string/playlist"
        app:showAsAction="always" />
    <item
        android:id="@+id/love_action"
        android:icon="@drawable/ic_heart_black"
        android:title="@string/love"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/loop_action"
        android:icon="@drawable/ic_loop"
        android:title="@string/loop"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
</menu>